--- a/car-shop/public/views/profile.html
+++ b/car-shop/public/views/profile.html
@@ -73,20 +73,38 @@
     </div>
 
     <div id="authed-container" class="container d-none">
-      <ul id="user-info" class="list-group my-2">
-        <li id="name-field" class="list-group-item w-50"><strong>Name: </strong><span></span></li>
-        <li id="email-field" class="list-group-item w-50"><strong>Email: </strong><span></span></li>
-        <li id="employee-id-field" class="list-group-item w-50"><strong>Employee ID: </strong><span></span></li>
-      </ul>
-      <button class="btn btn-dark my-2" id="logout-button" type="submit">logout</button>
-      <button class="btn btn-dark my-2" id="reset-password" type="submit">reset password</button>
+      <div class="row">
+        <div class="col-lg-4">
+          <ul id="user-info" class="list-group my-2">
+            <li id="name-field" class="list-group-item w-50"><strong>Name: </strong><span></span></li>
+            <li id="email-field" class="list-group-item w-50"><strong>Email: </strong><span></span></li>
+            <li id="employee-id-field" class="list-group-item w-50"><strong>Employee ID: </strong><span></span></li>
+            <!--          <li id="total-sales-field" class="list-group-item w-50"><strong>Total sales: </strong><span></span></li>-->
+          </ul>
+          <button class="btn btn-dark my-2" id="logout-button" type="submit">logout</button>
+          <button class="btn btn-dark my-2" id="reset-password" type="submit">reset password</button>
+        </div>
+        <div class="col-lg-8">
+          <table class="table table-hover">
+            <thead class="thead-dark">
+              <tr>
+                <th>Carmodel ID</th>
+                <th>Sale ID</th>
+              </tr>
+            </thead>
+            <tbody>
+            </tbody>
+          </table>
+          <button class="btn btn-dark my-2" id="refresh-list"><i aria-label="refresh" class="fas fa-sync-alt"></i></button>
+        </div>
 
-      <div id="set-employee-id" class="container">
-        <label for="employee-id-input">Set EmployeeID:</label>
-        <input type="text" class="form-control w-50" id="employee-id-input" placeholder="Such as &quot;1&quot;">
-        <button class="btn btn-dark my-2" id="change-employee-id" type="button">Change</button>
+        <div id="set-employee-id" class="container">
+          <label for="employee-id-input">Set EmployeeID:</label>
+          <input type="text" class="form-control w-50" id="employee-id-input" placeholder="Such as &quot;1&quot;">
+          <button class="btn btn-dark my-2" id="change-employee-id" type="button">Change</button>
+        </div>
+
       </div>
-
     </div>
 
     <!-- Modal -->
